<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <SearchView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="146dp"
            android:layout_height="122dp"
            android:layout_weight="0"
            android:importantForAccessibility="no"
            android:src="@drawable/burger"
            tools:ignore="NestedWeights,ImageContrastCheck" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/chicken_burger"
            android:textStyle="bold"
            android:textColor="#121314"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"/>

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_weight="0"
            android:minHeight="48dp"
            android:text="@string/select"
            tools:ignore="DuplicateSpeakableTextCheck" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:importantForAccessibility="no"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="146dp"
            android:layout_height="122dp"
            android:layout_weight="0"
            android:contentDescription="@string/todo"
            android:src="@drawable/chicken"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/chicken_masala"
            android:textStyle="bold"
            android:textColor="#121314"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"/>

        <RadioButton
            android:id="@+id/radiobtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_weight="0"
            android:minHeight="48dp"
            android:text="@string/select"
            tools:ignore="DuplicateIds" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:contentDescription="TODO"
        android:importantForAccessibility="no"
        android:orientation="horizontal"
        tools:ignore="HardcodedText">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="155dp"
            android:layout_height="122dp"
            android:layout_weight="0"
            android:src="@drawable/paneer"
            tools:ignore="ContentDescription,NestedWeights" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_weight="0"
            android:text="@string/paneer_masala"
            android:textColor="#121314"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_weight="0"
            android:minHeight="48dp"
            android:text="@string/select" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:importantForAccessibility="no"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="128dp"
            android:layout_height="122dp"
            android:layout_weight="0"
            android:src="@drawable/friedrice"
            tools:ignore="ContentDescription,NestedWeights" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="45dp"
            android:layout_weight="0"
            android:text="@string/fried_rice"
            android:textColor="#121314"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioBut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="40dp"
            android:layout_weight="0"
            android:minHeight="48dp"
            android:text="@string/select" />

    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="155dp"
            android:layout_height="122dp"
            android:layout_weight="0"
            android:src="@drawable/fruitscake"
            tools:ignore="ContentDescription,NestedWeights" />


        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_weight="0"
            android:text="@string/fruits_cake"
            android:textColor="#121314"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_weight="0"
            android:minHeight="48dp"
            android:text="@string/select" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/btn_custom"
            android:text="@string/_6_99_add_to_card"
            tools:ignore="VisualLintButtonSize,TextContrastCheck" />
        
    </LinearLayout>


</LinearLayout>


